@@ -18,9 +18,11 @@
 package ch.dvbern.stip.api.tenancy.resource;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import ch.dvbern.stip.api.benutzer.util.TestAsGesuchsteller;
+import ch.dvbern.stip.api.common.type.TenantIdentifier;
+import ch.dvbern.stip.api.config.type.StipConfig;
 import ch.dvbern.stip.api.util.RequestSpecUtil;
 import ch.dvbern.stip.api.util.TestDatabaseEnvironment;
 import ch.dvbern.stip.api.util.TestUtil;
@@ -28,13 +30,12 @@ import ch.dvbern.stip.generated.api.TenantApiSpec;
 import ch.dvbern.stip.generated.dto.TenantInfoDtoSpec;
 import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.junit.QuarkusTest;
+import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response.Status;
-import org.eclipse.microprofile.config.inject.ConfigProperty;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestMethodOrder;
 
-import static ch.dvbern.stip.api.tenancy.service.OidcTenantResolver.DEFAULT_TENANT_IDENTIFIER;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @QuarkusTestResource(TestDatabaseEnvironment.class)
@@ -43,13 +44,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 class TenantResourceTest {
 
     private final TenantApiSpec api = TenantApiSpec.tenant(RequestSpecUtil.quarkusSpec());
-    @ConfigProperty(name = "keycloak.url")
-    String keycloakUrlString;
+
+    @Inject
+    StipConfig config;
 
     @Test
     @TestAsGesuchsteller
     void test_get_current() throws MalformedURLException {
-        final var tenant = DEFAULT_TENANT_IDENTIFIER;
+        final var tenant = TenantIdentifier.BERN.getIdentifier();
         final var tenantInfo = api.getCurrentTenant()
             .execute(TestUtil.PEEK_IF_ENV_SET)
             .then()
@@ -60,9 +62,9 @@ class TenantResourceTest {
 
         assertThat(tenantInfo.getIdentifier()).isEqualTo(tenant);
 
-        final var keycloakUrl = new URL(keycloakUrlString);
+        final var keycloakUrl = URI.create(config.oidc().url()).toURL();
 
-        assertThat(new URL(tenantInfo.getClientAuth().getAuthServerUrl()))
+        assertThat(URI.create(tenantInfo.getClientAuth().getAuthServerUrl()).toURL())
             .isEqualToWithSortedQueryParameters(keycloakUrl);
     }
 }
